convert to modules for jlink